Display images for skills and projects with new server

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -53,6 +53,11 @@
     border: 1px inset var(--accent);
 }
 
+.project-info h5 {
+    font-size: larger;
+    text-align: center;
+}
+
 .slide-nav {
     display: flex;
     flex-direction: row;
