--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -76,6 +76,25 @@
     height: inherit;
 }
 
+/* .project-skill-grid {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.project-skill-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.project-skill-grid .project-skill-card img {
+    width: 25px;
+    height: 25px;
+} */
+
 @media only screen and (min-width: 1000px) and (max-width: 1357px) {
 
     .project-slide,
